--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="banner">
         <nav>
             <ul>
                 <li><a href="">LOGO</a></li>
-                <li><a href=""><button>Sign Up</button></a></li>
+                <li><a href=""><button class="btn-primary">Sign Up</button></a></li>
             </ul>
         </nav>
+        <div class="banner-description">
+            <div class="title">Cool Dark UI Template for Webflow Agencies!</div>
+            <button class="btn-primary">Stay Focused</button>
+            
+        </div>
     </header>
     <main></main>
     <footer></footer>
