productive part add

--- a/index.html
+++ b/index.html
@@ -32,7 +32,22 @@
             <div class="img">
                 <img src="./Assets/wc-mini.png" alt="">
             </div>
+
         
+</div>
+<div class="productive-1">
+   <div class="text-2"> <h1>Joined Thousands of Productive Users</h1></div>
+<div class="lower-case">
+    <div class="lower-1">
+    <h2>50K</h2>
+    <p>Active Users</p></div>
+    <div class="lower-2">
+    <h2>2M+</h2>
+    <p>Focus Sessions</p></div>
+   <div class="lower-3">
+    <h2>95%</h2>
+    <p>Satisfaction Rate</p></div>
+</div>
 </div>
     </main>
     <footer></footer>
