--- a/index.html
+++ b/index.html
@@ -49,6 +49,51 @@
     <p>Satisfaction Rate</p></div>
 </div>
 </div>
+<div class="uses">
+    <div class="uses-1">
+        <h1>What our users say</h1>
+        
+
+    </div>
+    <div class="uses-2">
+    <div class="use-var-1">
+        <img src="./Assets/icon-star.png" alt="">
+        <img src="./Assets/icon-star.png" alt="">
+        <img src="./Assets/icon-star.png" alt="">
+        <img src="./Assets/icon-star.png" alt="">
+        <img src="./Assets/icon-star.png" alt="">
+        <h1>Loved by Designers</h1>
+        <p>This template instantly leveled up our presence.” </p>
+        <h6>Reviewer <br> name</h6>
+    </div>
+    <div class="use-var-2"> <img src="./Assets/icon-star.png" alt="">
+        <img src="./Assets/icon-star.png" alt="">
+        <img src="./Assets/icon-star.png" alt="">
+        <img src="./Assets/icon-star.png" alt="">
+        <img src="./Assets/icon-star.png" alt="">
+        <h1>Loved by Designers</h1>
+        <p>This template instantly leveled up our presence.” </p>
+        <h6>Reviewer <br> name</h6></div>
+    <div class="use-var-3"> <img src="./Assets/icon-star.png" alt="">
+        <img src="./Assets/icon-star.png" alt="">
+        <img src="./Assets/icon-star.png" alt="">
+        <img src="./Assets/icon-star.png" alt="">
+        <img src="./Assets/icon-star.png" alt="">
+        <h1>Loved by Designers</h1>
+        <p>This template instantly leveled up our presence.” </p>
+        <h6>Reviewer <br> name</h6></div>
+    </div>
+</div>
+<div class="focus">
+    <div class="focus-1">
+    <h1>Ready to focus better</h1>
+    <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+    <button class="btn-primary">Ger Started Free</button>
+    </div>
+<div class="focus-2">
+    <img src="./Assets/wc-big.png" alt="">
+    </div>
+</div>
     </main>
     <footer></footer>
 </body>
