--- a/index.html
+++ b/index.html
@@ -94,7 +94,40 @@
     <img src="./Assets/wc-big.png" alt="">
     </div>
 </div>
+<div class="lets-go">
+    <div class="lets-go-1">
+        <h1>Let’s Get in Touch</h1>
+    </div>
+    <div class="lets-go-2">
+        <form >
+            <label for="">Email</label><br><br>
+            <input class="inp" type="email" name="" id="" placeholder="example@email.com"><br><br>
+            <label for="">Name</label><br><br>
+            <input class="inp" type="text" name="" id="" placeholder="full name"><br><br>
+            <label for="">Message</label><br><br>
+            <textarea cols="70" rows="5" name="" id="">write your message</textarea><br><br>
+            
+        </form>
+       
+        <button class="btn-primary">Get in Touch</button>
+    </div>
+
+</div>
     </main>
-    <footer></footer>
+    <footer>
+       <div class="foot">
+        <h1 class="foot-1">LOGO</h1>
+        <p class="foot-2">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
+
+        <div class="low">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href=""></a>How it Works</li>
+                <li><a href=""></a>Services</li>
+            </ul>
+        </div>
+       </div> 
+    </footer>
 </body>
 </html>
